--- a/index.css
+++ b/index.css
@@ -5,12 +5,13 @@
     border: 0;
     box-sizing: border-box;
     outline: 0;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bold;
 }
 
 body {
-    background: black;
-    color: white;
+    background: white;
+    color: gray;
 }
 
 input :not([type="checkbox"]):not([type="radio"]) {
@@ -19,39 +20,45 @@ input :not([type="checkbox"]):not([type="radio"]) {
     border-bottom: 1px solid rgba( #fff,.3);
     background: transparent;
     color: #fff;
-    font-size: 16px;
+    font-size: 2px;
     &:focus {
         border-color: rgb(#fff,.6);
     }
 }
+#input {
+    background-color: black;
+    color: white;
+}
 
 select option {
-    color: #111;
+    color: black;
 }
 
 textarea {
-    width: 100%;
+    width: 90%;
     border-bottom: 1px solid rgba(#fff,.3);
-    background: transparent;
-    color: white;
+    background: black;
+    color: gray;
     font-size: 16px;
     padding: 10px 0;
 }
 
+
 button {
-    width: 100%;
+    width: 20%;
     height: 40px;
     border-radius: 4px;
-    background-color: purple;
+    background-color: black;
     color: #fff;
     font-size: 16px;
     cursor: pointer;
+    align-items: center;
 }
 
 .form {
     width: 80%;
     margin: 20px auto;
-    border: 1px solid rgba( #fff,   .3);
+    border: 1px solid rgba( #fff,.3);
     padding: 25px;
    
  
@@ -61,8 +68,8 @@ ul {
     label {
         font-size: 8px;
         color: rgba( #fff,.8);
-        display: block;
         margin-bottom: 10px;
+        display: inline;
     }
     .error-msg {
         font-size: 12px;
@@ -80,4 +87,6 @@ h3 {
     font-size: 30px;
     margin-bottom: 30px;
     font-weight: 600;
+    color:black ;
+    font-weight: bold;
 }
